Fixed extra margin in error message

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ p{
 
 .error {
     color: red;
+    margin: 0em;
 }
 
 /*__________ header _________________________*/
